# phosh-lockscreen-errands

./: errands-data.vala  errands-widget.vala  errands.css  meson.build  org.gnome.Phosh.Plugin.Errands.desktop  plugin.vala
